--- a/spring-feign/src/main/resources/application.yml
+++ b/spring-feign/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:9991/eureka/
+      defaultZone: http://localhost:9991/eureka/
 server:
   port: 9995
 spring:
