--- a/spring-config-repo/config-client-dev.properties
+++ b/spring-config-repo/config-client-dev.properties
@@ -1,1 +1,4 @@
-foo = foo version 3
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+spring.datasource.password: password
+spring.datasource.url: jdbc:mysql://DEVIP:PORT/DBNAME?characterEncoding=UTF-8
+spring.datasource.username: username
